tests/errors/invalid_input_syntax.peb
// Test: Invalid input syntax (number instead of string)
ask 123 and save as name
